--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medical Text Analysis</title>
+    <title>Rakattack - OnkoMiner</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
@@ -16,7 +16,7 @@
         <div id="screen1" class="screen">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-center mb-4">Medical Text Analysis</h2>
+                    <h2 class="text-center mb-4">Rakattack - OnkoMiner</h2>
                     <div class="card">
                         <div class="card-body">
                             <div class="form-group">
