--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -65,29 +65,23 @@
 
             <div class="row">
                 <!-- Left Half -->
-                <div class="col-md-6 border-end">
+                <div class="col-md-5 border-end">
                     <div class="card mb-3">
                         <div class="card-body">
-                            <h5>Original Text:</h5>
+                            <h5>Originalní text:</h5>
                             <div id="original-text" class="original-text"></div>
                         </div>
                     </div>
                 </div>
 
                 <!-- Right Half -->
-                <div class="col-md-6">
+                <div class="col-md-7">
                     <div class="card">
                         <div class="card-body">
-                            <h5>Analysis Results:</h5>
+                            <h5>Výsledky analýzy:</h5>
                             <div id="analysis-results" class="results-container"></div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row mt-3">
-                <div class="col-12 text-center">
-                    <button id="back-btn" class="btn btn-secondary">Back to Input</button>
                 </div>
             </div>
         </div>
