add hackaton logo, hover timeline

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,11 @@
         <div id="screen1" class="screen">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="text-center mb-4">Rakattack - OnkoMiner</h2>
+                    <div class="text-center mb-3">
+                        <img src="{{ url_for('static', filename='img/rakathon_logo.png') }}" alt="Rakathon Logo"
+                            class="img-fluid" style="max-height: 130px;">
+                    </div>
+                    <h2 class="text-center mb-4">RakAttack - OnkoMiner</h2>
                     <div class="card">
                         <div class="card-body">
                             <div class="form-group">
